# streamjoy

./: .gitignore  .pre-commit-config.yaml  HOWTOCONTRIBUTE.md  HOWTORELEASE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  issue.md
.github/workflows/: build.yml  documentation.yml  release.yml
docs/: best_practices.md  how_do_i.md  package_design.md  supported_formats.md
docs/api_reference/: models.md
docs/example_recipes/: air_temperature.md  co2_timeseries.md  gender_gapminder.md  nice_orbit.md  nmme_forecast.md  oisst_globe.md  sea_ice.md  sine_wave.md  stream_code.md  temperature_anomaly.md
docs/example_recipes/assets/: nmme_forecast.html
docs/recipes/: nice_orbits.md
docs/reference/: core.md  renderers.md  settings.md  streamjoy.md  streams.md  streamwee.md  wrappers.md
docs/stylesheets/: extra.css
streamjoy/: .gitignore  __init__.py  _utils.py  cli.py  core.py  models.py  pandas.py  polars.py  renderers.py  serializers.py  settings.py  streams.py  ui.py  wrappers.py  xarray.py
streamwee/: __init__.py  _utils.py  core.py  models.py  pandas.py  plugins.py  settings.py  utils.py  wrappers.py  xarray.py
tests/: conftest.py  test_add.py  test_core.py  test_models.py  test_pandas.py  test_polars.py  test_renderers.py  test_serializers.py  test_settings.py  test_side_by_side.py  test_streams.py  test_wrappers.py  test_xarray.py
tests/data/: air.nc  gapminder.csv  gapminder.parquet  test.ipynb
tests/data/air.zarr/: .zmetadata
tests/data/air.zarr/air/: .zarray  0.0.0
tests/data/air.zarr/time/: .zarray  0
