[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I", "UP"]
extend-ignore = ["TRY003"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.pytest.ini_options]
addopts = "--cov=streamjoy/ --cov-report=term-missing"


[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "streamjoy/__init__.py"

[tool.hatch.envs.default]
python = "3.9"
dependencies = [
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "xarray",
    "pandas",
    "zarr",
    "netcdf4",
    "matplotlib",
    "pyarrow",
    "hvplot",
    "bs4",
    "selenium",
    "webdriver_manager",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "ruff format .",
  "ruff check --fix .",
]
lint-check = [
  "ruff format --check .",
  "ruff check .",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "streamjoy"
authors = [
  { name = "streamjoy", email = "hey.at.py@gmail.com" }
]
description = "Enjoy animating!"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "param",
    "bokeh",
    "dask[distributed]",
    "imageio[pyav]>=2.34.0",
    "pygifsicle==1.0.5",
]

[project.urls]
Documentation = "https://ahuang11.github.io/streamjoy/"
Source = "https://github.com/ahuang11/streamjoy"
